# fastapi-firebase

./: .flake8  .gitignore  README.md  pyproject.toml
.github/scripts/: install.sh  publish.sh
.github/workflows/: ci.yml  code-checks.ym  code-checks.yml  deployment.yml  publish.yml  test.yml
app/: main.py  router.py  settings.py
app/fbtoken-util/: README.md  package.json
app/fbtoken-util/src/components/: HelloWorld.vue
fastapi_firebase/: __init__.py  app.py  auth.py  schemes.py
tests/: test_app.py  test_auth.py  test_fastapi_firebase.py
